--- a/UI/css/newOrder.css
+++ b/UI/css/newOrder.css
@@ -1,111 +1,117 @@
 .center {
-	text-align: center;
+  text-align: center;
 }
 .steps {
-	width: 100%;
-	margin-bottom: 0.5em;
+  width: 100%;
+  margin-bottom: 0.5em;
 }
 
 .progress {
-	counter-reset: step;
+  counter-reset: step;
 }
 
 .progress li {
-	list-style: none;
-	float: left;
-	width: 33.33%;
-	position: relative;
-	text-align: center;
-	font-family: "Gotham-Medium";
+  list-style: none;
+  float: left;
+  width: 33.33%;
+  position: relative;
+  text-align: center;
+  font-family: "Gotham-Medium";
 }
 
 .progress li:before {
-	content: counter(step);
-	counter-increment: step;
-	width: 28px;
-	height: 28px;
-	line-height: 28px;
-	border: 2px solid var(--secondary-color);
-	display: block;
-	text-align: center;
-	margin: 0px auto 10px auto;
-	border-radius: 50%;
-	background-color: var(--main-white);
+  content: counter(step);
+  counter-increment: step;
+  width: 28px;
+  height: 28px;
+  line-height: 28px;
+  border: 2px solid var(--secondary-color);
+  display: block;
+  text-align: center;
+  margin: 0px auto 10px auto;
+  border-radius: 50%;
+  background-color: var(--main-white);
 }
 .progress li:after {
-	content: "";
-	position: absolute;
-	width: 100%;
-	height: 3px;
-	background-color: var(--secondary-color);
-	top: 15px;
-	left: -50%;
-	z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: var(--secondary-color);
+  top: 15px;
+  left: -50%;
+  z-index: -1;
 }
 
 .progress li:first-child:after {
-	display: none;
+  display: none;
 }
 
 .progress li.active {
-	color: var(--royal-primary-purple);
+  color: var(--royal-primary-purple);
 }
 .progress li.active:before {
-	border: 2px solid var(--royal-primary-purple);
-	background-color: var(--royal-primary-purple);
-	color: var(--main-white);
+  border: 2px solid var(--royal-primary-purple);
+  background-color: var(--royal-primary-purple);
+  color: var(--main-white);
 }
 
 .progress li.active:after {
-	background-color: var(--royal-primary-purple);
-	border: 1px solid var(--royal-primary-purple);
+  background-color: var(--royal-primary-purple);
+  border: 1px solid var(--royal-primary-purple);
 }
 
 /*media queries*/
 /* for mobile extra small screen */
 @media only screen and (max-width: 767px) {
-	.progress li:before {
-		margin: 0px 0px 10px 0px;
-	}
-	.progress li:after {
-		left: -90%;
-	}
+  .progress li:before {
+    margin: 0px 0px 10px 0px;
+  }
+  .progress li:after {
+    left: -90%;
+  }
 
-	.progress li {
-		text-align: start;
-		font-size: 12px;
-	}
+  .progress li {
+    text-align: start;
+    font-size: 12px;
+  }
 }
 /*buttons */
 .inline-btn {
-	display: flex;
-	flex-direction: row;
-	flex: 1;
+  display: flex;
+  flex-direction: row;
+  flex: 1;
 }
 /* forms css*/
 #new-order .order-form {
-	display: none;
+  display: none;
 }
 
 #new-order .order-form.active {
-	display: block;
+  display: block;
 }
 
 .inline-content {
-	display: flex;
-	flex-direction: row;
-	/* justify-content: space-evenly; */
-	flex-wrap: nowrap;
+  display: flex;
+  flex-direction: row;
+  /* justify-content: space-evenly; */
+  flex-wrap: nowrap;
 }
 
 .inline-content label {
-	color: var(--secondary-color);
-	font-family: "Gotham-Medium";
+  color: var(--secondary-color);
+  font-family: "Gotham-Medium";
 }
 .inline-content label:after {
-	content: ":";
-	font-weight: bold;
+  content: ":";
+  font-weight: bold;
 }
 .inline-content p {
-	padding-left: 1em;
+  padding-left: 1em;
+}
+
+.errors p {
+  color: red;
+  text-align: center;
+  font-size: 14px;
 }
