--- a/UI/css/admin.css
+++ b/UI/css/admin.css
@@ -1,11 +1,16 @@
 table tr:hover td:last-child.editable .icon-edit {
-	display: unset;
+  display: unset;
 }
 
 .item-counter h5 {
-	font-size: 26px;
-	font-family: "Gotham-Bold";
-	padding: 0%;
-	margin: 0%;
-	float: right;
+  font-size: 26px;
+  font-family: "Gotham-Bold";
+  padding: 0%;
+  margin: 0%;
+  float: right;
+}
+
+td.delivered span.icon-edit,
+td.canceled span.icon-edit {
+  display: none;
 }
