--- a/UI/css/loading.css
+++ b/UI/css/loading.css
@@ -1,7 +1,9 @@
-#loaded-data {
-  display: none;
-}
-
 #loader {
-  display: block;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
